--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,9 @@
 - hosts: 127.0.0.1
   gather_facts: yes
 
+  vars:
+     - USER_NAME: vagrant
+
 
   tasks:
 
@@ -8,24 +11,57 @@
     apt:
       name:
         - zsh
-	- emacs
-	- htop
-	- curl
+        - emacs
+        - htop
+        - curl
+        - git
       state: latest
-      sudo: yes
-      when: ansible_os_family == "Debian"
+    when: ansible_os_family == "Debian"
+
+  - name: setup git
+    shell: |
+      git config --global user.email "albert.crowley@tcg.com"
+      git config --global user.name "Al Crowley"
+
+
+  - name: install zsh
+    dnf:
+      name:
+        - zsh
+        - emacs
+        - htop
+        - curl
+      state: latest
+    become: true
+    when: ansible_os_family == "RedHat"
+
+    
 
   - name: Install oh-my-zsh
     shell: sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+    args:
+      creates: /home/{{ USER_NAME }}/.oh-my-zsh
+
+  - name: Install zsh-autosuggestions plugin
+    shell: "git clone https://github.com/zsh-users/zsh-autosuggestions /home/{{ USER_NAME }}/.oh-my-zsh/custom/plugins/zsh-autosuggestions"
+    args:
+      creates: /home/{{ USER_NAME }}/.oh-my-zsh/plugins/zsh-autosuggestions
 
   - copy:
       src: bashrc
-      dest: ~/.bashrc
+      dest: "/home/{{ USER_NAME }}/.bashrc"
+      backup: yes
 
   - copy:
       src: zshrc
-      dest: ~/.zshrc
+      dest: "/home/{{ USER_NAME }}/.zshrc"
+      backup: yes
 
+  - name: set shell
+    user:
+      name: "{{ USER_NAME }}"
+      shell: /usr/bin/zsh
+    become: true
 
 
   
