--- a/playbook.yml
+++ b/playbook.yml
@@ -18,11 +18,6 @@
       state: latest
     when: ansible_os_family == "Debian"
 
-  - name: setup git
-    shell: |
-      git config --global user.email "albert.crowley@tcg.com"
-      git config --global user.name "Al Crowley"
-
 
   - name: install zsh
     dnf:
@@ -31,11 +26,18 @@
         - emacs
         - htop
         - curl
+        - git
       state: latest
     become: true
     when: ansible_os_family == "RedHat"
 
-    
+
+  - name: setup git
+    shell: |
+      git config --global user.email "albert.crowley@tcg.com"
+      git config --global user.name "Al Crowley"
+
+
 
   - name: Install oh-my-zsh
     shell: sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
@@ -45,7 +47,19 @@
   - name: Install zsh-autosuggestions plugin
     shell: "git clone https://github.com/zsh-users/zsh-autosuggestions /home/{{ USER_NAME }}/.oh-my-zsh/custom/plugins/zsh-autosuggestions"
     args:
-      creates: /home/{{ USER_NAME }}/.oh-my-zsh/plugins/zsh-autosuggestions
+      creates: /home/{{ USER_NAME }}/.oh-my-zsh/custom/plugins/zsh-autosuggestions
+
+  - name: Install autojump plugin
+    shell: |
+      git clone git://github.com/wting/autojump.git
+      cd autojump
+      python3 install.py
+    args:
+      creates: autojump
+
+  - name: fix python symlink for autojump
+    shell: ln -s `which python3` /usr/bin/python
+    become: true
 
   - copy:
       src: bashrc
